Setup the callbacks

--- a/FeastAI.ipynb
+++ b/FeastAI.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyNdh7vdsJTsy0PBEFR6Q9TY",
+      "authorship_tag": "ABX9TyMsAW4xjUXQbZU3PhztQ68M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3535,12 +3535,48 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "> \"In above cell, via map this preprocessing fucnt i.e preprocees_img across our training dataset , shuffle a number elements and then turn them into batch size of 32 and via prefectch, via prpcessing the given batch it make ready the next upcoming batch\"\n",
+        "\n",
+        "* key thing about prefecth its that it get computed on *CPU*"
+      ],
       "metadata": {
         "id": "9rA2xXsbw2il"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Creating modelling callbacks\n",
+        "\n",
+        "This help us to track our model  while trainning\n",
+        "\n",
+        "* Tensorboard callback to log traning reuslts\n",
+        "* Model checkpoint  to save our model's progress after feature extraction"
+      ],
+      "metadata": {
+        "id": "OLK5bim-yK9_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## create tensorboard call back\n",
+        "from helper_functions  import create_tensorboard_callback\n",
+        "\n",
+        "# create  mdoelcheckpoint callbakc->saves model progress while traning\n",
+        "checkpoint_path=\"model_checkpoints/cp.ckpt\"## /cp.ckpt-> tells to save it in cp folder with name ckpt\n",
+        "model_checkpoint=tf.keras.callbacks.ModelCheckpoint(checkpoint_path,\n",
+        "                                                    monitor=\"val_acc\",\n",
+        "                                                    save_best_only=True, ## saves only best model\n",
+        "                                                    save_weight_only=True## saves wights only, easier to load\n",
+        "                                                      ) ## can set verbose =0-> donont tells wherteher model is saved or not"
+      ],
+      "metadata": {
+        "id": "VPcAXMld1gO5"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     }
   ]
